feat(backend): configura segurança websocket e correções de CORS no gateway